Bug 236736 - Exception when editing an encrypted message
Summary: Exception when editing an encrypted message
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: akonadi-ports-regression
Depends on:
Blocks: 223438
  Show dependency treegraph
 
Reported: 2010-05-07 19:14 UTC by Thomas McGuire
Modified: 2010-05-12 22:31 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas McGuire 2010-05-07 19:14:15 UTC
1. Create a simple mail with a single attachment, activate encryption, and save 
   it as draft (with the "never encrypt drafts" option disabled).
2. In the drafts folder, double-click on that message to edit it
3. Result: Exception

Catchpoint 1 (exception thrown), 0x00007ffff1895b00 in __cxa_throw () from /usr/lib64/libstdc++.so.6

#0  0x00007ffff1895b00 in __cxa_throw () from /usr/lib64/libstdc++.so.6
#1  0x00007ffff68d2f9c in Akonadi::Item::payload<boost::shared_ptr<KMime::Message> > (this=0x7fffffffbdd0) at /media/kdedev/trunk/kde/include/akonadi/item.h:382
#2  0x00007fffec1ec36e in MessageViewer::ObjectTreeParser::createAndParseTempNode (this=0x7fffffffb980, item=..., content=0x2038d98 "Content-Type: multipart/mixed; boundary=\"nextPart1654694.C77qAPOzEp\"\nContent-Transfer-Encoding: 7Bit\n\n\n--nextPart
1654694.C77qAPOzEp\nContent-Transfer-Encoding: 7Bit\nContent-Type: text/plain; charset=\"u"..., cntDesc=0x7fffec25b028 "encrypted data") at /media/kdedev/trunk/src/KDE/kdepim-git/messageviewer/objecttreeparser.cpp:203
#3  0x00007fffec1f231c in MessageViewer::ObjectTreeParser::processMultiPartEncryptedSubtype (this=0x7fffffffb980, item=..., node=0x16430b0, result=...) at /media/kdedev/trunk/src/KDE/kdepim-git/messageviewer/objecttreeparser.cpp:1509
#4  0x00007fffec1fc841 in (anonymous namespace)::MultiPartEncryptedBodyPartFormatter::process (this=0xfbdf10, otp=0x7fffffffb980, item=..., node=0x16430b0, result=...) at /media/kdedev/trunk/src/KDE/kdepim-git/messageviewer/bodypartformatter.cpp:121
#5  0x00007fffec1ea536 in MessageViewer::ObjectTreeParser::parseObjectTree (this=0x7fffffffb980, item=..., node=0x16430b0) at /media/kdedev/trunk/src/KDE/kdepim-git/messageviewer/objecttreeparser.cpp:293
#6  0x00007ffff6a6a7cb in KMComposeWin::setMsg (this=0xd081e0, newMsg=..., mayAutoSign=false, allowDecryption=true, isModified=false) at /media/kdedev/trunk/src/KDE/kdepim-git/kmail/kmcomposewin.cpp:1751
#7  0x00007ffff69755d6 in KMEditMsgCommand::execute (this=0xd578b0) at /media/kdedev/trunk/src/KDE/kdepim-git/kmail/kmcommands.cpp:646
#8  0x00007ffff69776b9 in KMCommand::slotPostTransfer (this=0xd578b0, result=OK) at /media/kdedev/trunk/src/KDE/kdepim-git/kmail/kmcommands.cpp:277
#9  0x00007ffff6977bca in KMCommand::qt_metacall (this=0xd578b0, _c=InvokeMetaMethod, _id=5, _a=0x7fffffffc210) at /media/kdedev/trunk/build/KDE/kdepim-git/kmail/kmcommands.moc:93
#10 0x00007ffff6980025 in KMEditMsgCommand::qt_metacall (this=0xd578b0, _c=InvokeMetaMethod, _id=9, _a=0x7fffffffc210) at /media/kdedev/trunk/build/KDE/kdepim-git/kmail/kmcommands.moc:539
#11 0x00007ffff1ec886f in QMetaObject::metacall (object=0xd578b0, cl=InvokeMetaMethod, idx=9, argv=0x7fffffffc210) at kernel/qmetaobject.cpp:237
#12 0x00007ffff1eddbe0 in QMetaObject::activate (sender=0xd578b0, m=0x7ffff6dfb340, local_signal_index=0, argv=0x7fffffffc210) at kernel/qobject.cpp:3293
#13 0x00007ffff69658a0 in KMCommand::messagesTransfered (this=0xd578b0, _t1=OK) at /media/kdedev/trunk/build/KDE/kdepim-git/kmail/kmcommands.moc:108
#14 0x00007ffff69771ce in KMCommand::slotJobFinished (this=0xd578b0) at /media/kdedev/trunk/src/KDE/kdepim-git/kmail/kmcommands.cpp:390
#15 0x00007ffff6977bee in KMCommand::qt_metacall (this=0xd578b0, _c=InvokeMetaMethod, _id=7, _a=0x7fffffffc470) at /media/kdedev/trunk/build/KDE/kdepim-git/kmail/kmcommands.moc:95
#16 0x00007ffff6980025 in KMEditMsgCommand::qt_metacall (this=0xd578b0, _c=InvokeMetaMethod, _id=11, _a=0x7fffffffc470) at /media/kdedev/trunk/build/KDE/kdepim-git/kmail/kmcommands.moc:539
#17 0x00007ffff1ec886f in QMetaObject::metacall (object=0xd578b0, cl=InvokeMetaMethod, idx=11, argv=0x7fffffffc470) at kernel/qmetaobject.cpp:237
#18 0x00007ffff1eddbe0 in QMetaObject::activate (sender=0xd08870, m=0x7ffff76f4780, local_signal_index=3, argv=0x7fffffffc470) at kernel/qobject.cpp:3293
#19 0x00007ffff7344411 in KJob::result (this=0xd08870, _t1=0xd08870) at /media/kdedev/trunk/build/KDE/kdelibs/kdecore/kjob.moc:194
#20 0x00007ffff73447fd in KJob::emitResult (this=0xd08870) at /media/kdedev/trunk/src/KDE/kdelibs/kdecore/jobs/kjob.cpp:312
#21 0x00007ffff4625f4c in Akonadi::JobPrivate::delayedEmitResult (this=0x1590350) at /media/kdedev/trunk/src/KDE/kdepimlibs-git/akonadi/job.cpp:143
#22 0x00007ffff462658c in Akonadi::Job::qt_metacall (this=0xd08870, _c=InvokeMetaMethod, _id=6, _a=0x7fffffffc680) at /media/kdedev/trunk/build/KDE/kdepimlibs-git/akonadi/job.moc:91
#23 0x00007ffff4607254 in Akonadi::ItemFetchJob::qt_metacall (this=0xd08870, _c=InvokeMetaMethod, _id=34, _a=0x7fffffffc680) at /media/kdedev/trunk/build/KDE/kdepimlibs-git/akonadi/itemfetchjob.moc:73
#24 0x00007ffff1ec886f in QMetaObject::metacall (object=0xd08870, cl=InvokeMetaMethod, idx=34, argv=0x7fffffffc680) at kernel/qmetaobject.cpp:237
#25 0x00007ffff1eddbe0 in QMetaObject::activate (sender=0x15c90d0, m=0x7ffff22353e0, local_signal_index=0, argv=0x0) at kernel/qobject.cpp:3293
#26 0x00007ffff1ee7966 in QSingleShotTimer::timeout (this=0x15c90d0) at .moc/debug-shared/qtimer.moc:82
#27 0x00007ffff1ee7aa7 in QSingleShotTimer::timerEvent (this=0x15c90d0) at kernel/qtimer.cpp:308
#28 0x00007ffff1ed8426 in QObject::event (this=0x15c90d0, e=0x7fffffffd230) at kernel/qobject.cpp:1212
#29 0x00007ffff2f6aa1b in QApplicationPrivate::notify_helper (this=0x650f10, receiver=0x15c90d0, e=0x7fffffffd230) at kernel/qapplication.cpp:4304
#30 0x00007ffff2f6aea4 in QApplication::notify (this=0x7fffffffd7c0, receiver=0x15c90d0, e=0x7fffffffd230) at kernel/qapplication.cpp:3708
#31 0x00007ffff794a7c7 in KApplication::notify (this=0x7fffffffd7c0, receiver=0x15c90d0, event=0x7fffffffd230) at /media/kdedev/trunk/src/KDE/kdelibs/kdeui/kernel/kapplication.cpp:302
#32 0x00007ffff1ec0a69 in QCoreApplication::notifyInternal (this=0x7fffffffd7c0, receiver=0x15c90d0, event=0x7fffffffd230) at kernel/qcoreapplication.cpp:704
#33 0x00007ffff2f67d1b in QCoreApplication::sendEvent (receiver=0x15c90d0, event=0x7fffffffd230) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#34 0x00007ffff1f00097 in QTimerInfoList::activateTimers (this=0x654470) at kernel/qeventdispatcher_unix.cpp:603
#35 0x00007ffff1efd76f in timerSourceDispatch (source=0x654410) at kernel/qeventdispatcher_glib.cpp:184
#36 0x00007ffff1efd7a9 in idleTimerSourceDispatch (source=0x6544d0) at kernel/qeventdispatcher_glib.cpp:231
#37 0x00007fffe79f20fb in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#38 0x00007fffe79f58cd in ?? () from /usr/lib64/libglib-2.0.so.0
#39 0x00007fffe79f5a8b in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#40 0x00007ffff1efc491 in QEventDispatcherGlib::processEvents (this=0x616330, flags=...) at kernel/qeventdispatcher_glib.cpp:412
#41 0x00007ffff305ed67 in QGuiEventDispatcherGlib::processEvents (this=0x616330, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#42 0x00007ffff1ebce63 in QEventLoop::processEvents (this=0x7fffffffd630, flags=...) at kernel/qeventloop.cpp:149
#43 0x00007ffff1ebd087 in QEventLoop::exec (this=0x7fffffffd630, flags=...) at kernel/qeventloop.cpp:201
#44 0x00007ffff1ec14b3 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:981
#45 0x00007ffff2f6d9ac in QApplication::exec () at kernel/qapplication.cpp:3583
#46 0x0000000000403f79 in main (argc=2, argv=0x7fffffffd948) at /media/kdedev/trunk/src/KDE/kdepim-git/kmail/main.cpp:147
Comment 1 Leo Franchi 2010-05-12 22:31:40 UTC
SVN commit 1125980 by lfranchi:

Don't crash w hen opening an encrypted draft.

BUG: 236736


 M  +3 -1      kmcomposewin.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1125980