Don't crash w hen opening an encrypted draft.

BUG: 236736

svn path=/trunk/KDE/kdepim/kmail/; revision=1125980