kmcomposewin.cpp
@@ -1774,7 +1774,9 @@ void KMComposeWin::setMsg( const KMime::Message::Ptr &newMsg, bool mayAutoSign,
   msgContent->parse();
   MessageViewer::EmptySource emptySource;
   MessageViewer::ObjectTreeParser otp( &emptySource );//All default are ok
-  otp.parseObjectTree( Akonadi::Item(), msgContent );
+  Akonadi::Item item;
+  item.setPayload< KMime::Message::Ptr >( mMsg );
+  otp.parseObjectTree( item, msgContent );
 
   // Load the attachments
   MessageCore::AttachmentCollector ac;
